welcome.lessons.welcome.array.island.Island.scala.error
island:2: error: not found: value T
                                   for (i<- 1 to num.length-1) {if (T(i) == T(i-1)+1) {compteur = compteur +1}}; return compteur} 
                                                                    ^island:2: error: not found: value T
                                   for (i<- 1 to num.length-1) {if (T(i) == T(i-1)+1) {compteur = compteur +1}}; return compteur} 
                                                                            ^