welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {var compteur = 0;
                                   for (i<- 1 to num.length-1) {if (T(i) == T(i-1)+1) {compteur = compteur +1}}; return compteur}